# macpy

./: .gitignore  .gitmodules  README.rst  pyproject.toml  setup.py
docs/: Makefile  conf.py  enums.rst  events.rst  index.rst  interfaces.rst  rtd-requirements.txt
macpy/: __init__.py  event.py  key.py  platform.py  version.py
macpy/constant/: EC.py  VK.py  windows.py  xatom.py  xmap.py
macpy/constant/XK/: 3270.py  APL.py  ARABIC.py  ARMENIAN.py  BRAILLE.py  CAUCASUS.py  CURRENCY.py  CYRILLIC.py  GEORGIAN.py  GREEK.py  HEBREW.py  KATAKANA.py  KOREAN.py  LATIN1.py  LATIN2.py  LATIN3.py  LATIN4.py  LATIN8.py  LATIN9.py  MATHEMATICAL.py  MISCELLANY.py  PUBLISHING.py  SINHALA.py  SPECIAL.py  TECHNICAL.py  THAI.py  VIETNAMESE.py  XF86.py  XKB_KEYS.py  __init__.py
macpy/interface/: evkeyboard.py  evpointer.py  winkeyboard.py  winpointer.py  winwindow.py  xhelper.py  xkeyboard.py  xpointer.py  xwindow.py
macpy/types/: dummy.py  metawindow.py  structures.py  tuples.py  undefenum.py
util/: gen_x_const.py  xkb-switch.sh  xkb-switch_CMakeLists.txt
